# Dictionary-Pro

./: .gitignore  README.md  README_zh.md  main.py  pyproject.toml
dictpro/: __init__.py  agent.py  cli.py  concurrent.py  constants.py  fetchers.py  metrics.py  models.py  renderer.py
dictpro/parsers/: __init__.py  cambridge.py  thesaurus.py  wiktionary.py
docs/superpowers/plans/: 2026-04-22-agent-cli-mode.md
docs/superpowers/specs/: 2026-04-22-agent-cli-mode-design.md
scripts/: capture_fixtures.py  inspect_fixtures.py
skills/use-dictpro/: SKILL.md
tests/: conftest.py  test_agent_serialize.py  test_cli_agent.py  test_cli_agent_e2e.py  test_cli_args.py  test_concurrent.py  test_fetchers.py  test_online_smoke.py  test_parser_cambridge.py  test_parser_thesaurus.py  test_parser_wiktionary.py  test_renderer.py  wordlist.txt
tests/fixtures/cambridge/: good.html  nonexistent_xyz.html  run.html  swarm.html  who.html
tests/fixtures/thesaurus/: good.html  nonexistent_xyz.html  run.html  swarm.html  who.html
tests/fixtures/wiktionary/: good.html  run.html  swarm.html  who.html
tests/golden/: good.json  nonexistent_xyz.json  run.json  swarm.json  who.json
