[project]
name = "dictpro"
version = "0.2.0"
description = "Refactored Dictionary Pro: Cambridge + Wiktionary + FreeThesaurus vocabulary builder."
requires-python = ">=3.10"
dependencies = [
    "requests>=2.30",
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
test = ["pytest>=7"]

[project.scripts]
dictpro = "dictpro.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q -m 'not online'"
markers = [
    "online: tests that hit real dictionary/thesaurus websites (skipped by default)",
]

[tool.setuptools.packages.find]
include = ["dictpro*"]

[tool.coverage.run]
source = ["dictpro"]
# cli.py is an interactive entry point; metrics.py is the evaluator itself.
# Both are exercised via integration runs, not unit tests, so they're excluded
# from "core library" coverage.
omit = ["dictpro/cli.py", "dictpro/metrics.py"]

[tool.coverage.report]
show_missing = true
skip_empty = true

